Refactor model path handling in YOLO and OpenCV backends for improved consistency and resource loading